--- a/conf/example.toml
+++ b/conf/example.toml
@@ -2,7 +2,9 @@
 endpoint = "https://myhost"
 key = "mykey"
 secret = "mysecret"
+# Shall we check the certificate
 verify = false
+# Do we want to isolate?
 enabled = false
 
 [kafka]
@@ -14,7 +16,13 @@ key = "cert/KafkaConsumerPrivateKey.key"
 brokers = ["1.1.1.1:9093"]
 
 [twilio]
+# Do we want to send SMS or not?
 enabled = false
+# Token from Twilio
 token = ""
+# SID from Twilio
 sid = ""
+# Phone number, international format with no space, for example +123456789
 to = ""
+# Maximum messages per minute
+limit = 1
